--- a/Win10 project/Win10 project.csproj
+++ b/Win10 project/Win10 project.csproj
@@ -98,10 +98,14 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Booking.cs" />
+    <Compile Include="Guest.cs" />
+    <Compile Include="Hotel.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Room.cs" />
     <Compile Include="WebHandler.cs" />
   </ItemGroup>
   <ItemGroup>
