--- a/Win10WebService/Web.config
+++ b/Win10WebService/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Win10WebService-20160419100510.mdf;Initial Catalog=aspnet-Win10WebService-20160419100510;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="HotelDBContext" connectionString="data source=(localdb)\ProjectsV12;initial catalog=HotelDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="GuestViewDBContext" connectionString="data source=(localdb)\ProjectsV12;initial catalog=HotelDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
