--- a/Win10 project/Win10 project.csproj
+++ b/Win10 project/Win10 project.csproj
@@ -98,6 +98,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Facade\GuestViewFacade.cs" />
+    <Compile Include="Model\Guest_View.cs" />
     <Compile Include="Model\Booking.cs" />
     <Compile Include="Model\Guest.cs" />
     <Compile Include="Model\Hotel.cs" />
@@ -110,7 +112,7 @@
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Room.cs" />
-    <Compile Include="Facade\Facade.cs" />
+    <Compile Include="Facade\HotelDBFacade.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
